--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -199,6 +199,9 @@ p{
     				animation-fill-mode: forwards;
 				}
 			}
+			 div.n2-ss-button-container{
+				background:white !important;
+			}
 			// .nextend-bar-horizontal{
 			// 	display:none !important;
 			// }
