--- a/wp-content/themes/humescore/style.css
+++ b/wp-content/themes/humescore/style.css
@@ -114,7 +114,9 @@ p {
         list-style: none;
         box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.08);
         min-height: 81px;
-        padding: 1rem;
+        padding-top: 1rem;
+        padding-left: 1rem;
+        padding-bottom: 1rem;
         position: absolute;
         top: 21px;
         left: 13%;
@@ -127,12 +129,14 @@ p {
         .header_logo .menu .menu-item .sub-menu .sub-menu {
           position: absolute;
           top: 0;
-          left: 110%;
+          left: 100%;
           display: none; }
         .header_logo .menu .menu-item .sub-menu [class*="menu-item-"] {
           padding-top: 0.4rem;
           position: relative;
-          margin-bottom: 1%; }
+          margin-bottom: 1%;
+          width: 100%;
+          padding-right: 0; }
           .header_logo .menu .menu-item .sub-menu [class*="menu-item-"]:hover .sub-menu {
             display: block; }
       .header_logo .menu .menu-item:hover .sub-menu {
@@ -158,8 +162,10 @@ p {
   .site-content .n2-ss-slider-align-visible:hover #n2-ss-2-arrow-next {
     animation: animateArrow2 .5s;
     animation-fill-mode: forwards; }
-  .site-content .n2-ss-slider-align-visible div.n2-ss-button-container {
-    background: white !important; }
+  .site-content .n2-ss-slider-align-visible .n2-font-4669165dee3c2406bfe110cc3c6709a8-hover {
+    width: 101px;
+    margin: 0 auto;
+    border-bottom: 1px solid red; }
 
 @keyframes animateArrow {
   0% {
