--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -74,10 +74,13 @@ p{
 h1{
 	font-size: 24px;
     color: #333333;
+	text-transform:uppercase;
+
 }
-h2{
+h2,h3{
 	font-size:18px;
 	color:#333333;
+	text-transform:uppercase;
 }
 
 /*-------------------------------------------------------------
@@ -186,6 +189,7 @@ h2{
 	}
 	#headerMenu{
 		padding-bottom: 12px;
+		align-items:center;
 	}
 /*-------------------------------------------------
 	BODY
@@ -264,8 +268,11 @@ Single Posts
   		justify-content: center;
   		.thumbnailWrapper{
 				width: 90%;
+				height:700px;
   			.attachment-thumbnails {
 			width:100% !important;
+			height:100% !important;
+
 		}
 	}
 		.thumbnailWrapper2{
@@ -276,8 +283,11 @@ Single Posts
   		}
 		
 }
+/*-------------------------------------------------------------------------------
+	Content
+--------------------------------------------------------------------------------*/
 .content-width{
-	max-width:60% !important;
+	max-width:70% !important;
 	.entry-content{
 		margin-top:2rem;
 	}
@@ -351,6 +361,9 @@ Single Posts
 			.commentsNumber{
 				 padding-left:10px;
 			}
+/*-------------------------------------------------------------------------------
+	Custome Menu
+--------------------------------------------------------------------------------*/
 			.menu2{
 				margin-top:2rem;
 			}
@@ -368,7 +381,7 @@ Single Posts
 					border: 1px solid #dcdcdc;
 	  				margin-right: 1rem;
 	                height: 30px;
-	   				width: 100px;
+	   				min-width: 100px;
 	    			display: flex;
 	    			justify-content: center;
 	    			align-items: center;
@@ -400,3 +413,117 @@ Single Posts
 				}
 				
 			}
+/*-------------------------------------------------------------------------------
+	Static area
+--------------------------------------------------------------------------------*/
+.content-image1{
+	border-radius:100%;
+}
+.border{
+	    width: 100%;
+	    margin: 0 auto;
+	    border: 1px solid #dcdcdc;
+	    padding: 9px;
+	    .iconsWrapper{
+	    	display: flex;
+   			 width: 30%;
+	    a{
+	    	width:15%;
+	    }
+	    }
+	    .icon{
+	    	        height: 16px;
+				    fill: #716f6f;
+				    width: 15px;
+	    }
+}
+	/*-------------------------------------------------------------------------------
+		Related Posts Section
+	--------------------------------------------------------------------------------*/
+.relatedPosts{
+	.relatedPosts_blog{
+		width:26%;
+	}
+	.image{
+		height: 120px;
+   		width: 167px;
+		img{
+			height: 100%;
+    		width: 100%;
+		}
+
+	}
+	.title{
+		a{
+			color:#33363a;
+			text-decoration:none;
+
+		}
+			margin-top:1rem;
+		}
+	.date{
+		font-size:12px;
+		color:#999999 ;
+		text-transform:uppercase;
+	}
+}
+.RelatedPostHeaderStyle{
+		padding-bottom:1rem;
+		margin-bottom: 2rem;
+		border-bottom:1px solid;
+	}
+	/*-------------------------------------------------------------------------------
+	comments
+	--------------------------------------------------------------------------------*/
+	.comments-area{
+		border:1px solid #dcdcdc;
+	}
+	#comment{
+		border:1px solid #dcdcdc;
+		width:90%;
+		margin:0 auto;
+	}
+	.comment-form-comment{
+		width:100%;
+		display:flex;
+	    flex-direction: column;
+	    label{
+	    	padding-left:2rem;
+	    }
+	}
+	.comment-reply-title{
+		    padding-top: 1rem;
+		 	padding-left: 2rem;
+
+	}
+	.form-submit{
+		.submit{
+			    background: black;
+			    color: white;
+			    margin-left: 2.5rem;
+			    height: 37px;
+			    width: 121px;
+			    outline: none;
+			    border: none;
+		}
+	}
+	.logged-in-as{
+		padding-left:2rem;
+		a{
+			color:#333333;
+		}
+	}
+
+.comment-form-author{
+	display:inline-block;
+	width: 30%;
+	margin-left: 5%;
+}
+.comment-form-email{
+	display:inline-block;
+	width: 30%;
+}
+.comment-form-url{
+	display:inline-block;
+	width: 30%;
+}
