--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -679,6 +679,17 @@ Footer
 	.text_page{
 		margin-top:1rem;
 	}
+	.socailIcon{
+		margin-top:2rem;
+	}
+	.stay_connected{
+		font-size:13px;
+		font-weight:bold;
+		color:#666666;
+	    padding-bottom: 0.4rem;
+    	border-bottom: 1px solid #d2cece;
+    	text-align:center;
+	}
 }
 
 /*--------------------------------------------------------------------------------------------
