--- a/wp-content/themes/humescore/style.css
+++ b/wp-content/themes/humescore/style.css
@@ -547,6 +547,15 @@ Footer
     border-bottom: 1px solid #d2cece; }
   #secondary .text_page {
     margin-top: 1rem; }
+  #secondary .socailIcon {
+    margin-top: 2rem; }
+  #secondary .stay_connected {
+    font-size: 13px;
+    font-weight: bold;
+    color: #666666;
+    padding-bottom: 0.4rem;
+    border-bottom: 1px solid #d2cece;
+    text-align: center; }
 
 /*--------------------------------------------------------------------------------------------
 mediaqueries
