--- a/wp-content/themes/humescore/sass/variables.scss
+++ b/wp-content/themes/humescore/sass/variables.scss
@@ -2,8 +2,8 @@
 	Variables
 **/
 $color_main_boxes: #000;
-$max_xS : 576px;
-$max_md : 768px;
-$max_lg : 992px;
-$max_xL : 1200px;
+$xs : 576px;
+$md : 768px;
+$lg : 992px;
+$xL : 1200px;
 $borderColor: #d2cece;
